# torch-inference

./: .dockerignore  .env.cuda  .gitignore  .gitignore.backup  .gitignore_STATUS.md  .pre-commit-config.yaml  .tarpaulin.toml  .uvrc  100_PERCENT_COMPLETE.md  API_SOTA_MODELS.md  ARCHITECTURE.md  AUDIO_MODELS_GUIDE.md  BENCHMARKS.md  CLAUDE.md  CLEANUP_INSTRUCTIONS.md  CUDA_QUICK_REF.md  Cargo.toml  DOCKER_TROUBLESHOOTING.md  DOCUMENTATION_CONSOLIDATION.md  Dockerfile  Dockerfile.simple  FEATURE_COMPLETION_REPORT.md  MIGRATION_GUIDE.md  MISSION_COMPLETE.md  Makefile  ONNX_AUDIO_IMPLEMENTATION.md  QUICKSTART.md  QUICK_START_BENCHMARKS.md  README.md  README_BENCHMARKS.md  REORGANIZATION_COMPLETE.md  START_HERE.md  TESTING.md  TESTING_GUIDE.md  TTS_BENCHMARK_SUMMARY.md  benchmark.py  benchmark_advanced.py  benchmark_all_frameworks.py  benchmark_comprehensive.py  benchmark_comprehensive_final.py  (+57 more)
.cargo/: config.toml
.github/workflows/: basic.yml  test.yml  test.yml.backup
archive/: README.md
archive/config/: .env.template  FEATURE_COMPARISON.md
archive/deployment/: Makefile
archive/python/: production_configs.py  pytest.ini  tox.ini
benches/: README.md  all_models_ultra_bench.rs  analyze_benchmarks.rs  analyze_scaling.rs  audio_bench.rs  batch_concurrent_bench.rs  batch_size_throughput_bench.rs  benchmark_reporter.rs  cache_bench.rs  classification_bench.rs  comprehensive_api_benchmark.rs  concurrent_throughput_bench.rs  concurrent_throughput_benchmark.rs  cuda_tensorrt_benchmark.rs  detection_bench.rs  generate_inference_table.rs  image_classification_bench.rs  image_classification_benchmark.rs  llm_bench.rs  memory_bench.rs  model_inference_bench.rs  model_inference_bench_optimized.rs  model_inference_bench_with_report.rs  optimized_concurrent_bench.rs  optimized_throughput_bench.rs  quick_throughput_test.rs  run_all_models_bench.py  run_classification_benchmark.py  standalone_all_models_bench.rs  throughput_bench.rs  tts_bench.rs  tts_streaming_bench.rs  ultra_performance_bench.rs  visualize_all_models.py  visualize_all_models.rs  visualize_multi_model.rs  visualize_throughput.rs
benches/baseline/: bench_20260405.txt
benches/data/: BAR_CHARTS_README.md  MULTI_MODEL_BENCHMARK_README.md  README.md  (+5 more)
benchmark/: IMAGE_BENCHMARK_README.md  README.md  __init__.py  examples.py  gpu_demo_model.py  harness.py  http_client.py  image_benchmark.py  image_examples.py  image_metrics.py  manage.py  reporter.py  requirements.txt  resnet_examples.py  resnet_image_benchmark.py  test_benchmark.py  test_image_benchmark.py  tts_benchmark.py  yolo_benchmark.py
benchmark_sessions/: demo.json  discovery.json  server_default.json  server_speecht5_tts.json  voice_comparison.json
calibration_cache/: calibration_entropy_-1265284576903335141.pkl  calibration_entropy_-2114923341416736514.pkl  calibration_entropy_-3673328305621787526.pkl  calibration_entropy_-8664232315680969908.pkl  calibration_entropy_1110711690765699916.pkl  calibration_entropy_3635810092977924029.pkl  calibration_entropy_5286751324879890848.pkl  calibration_entropy_6622630397670487193.pkl  calibration_entropy_8043524127334133261.pkl
config/: cuda_tensorrt.toml  default.yaml  development.yaml  production.toml  production.yaml  testing.yaml
data/: models.json  sessions.json  users.json
demo_benchmark_results/: demo_tts_v1.csv  demo_tts_v1_results.json
demo_new_concurrency/: quick_concurrency_test.csv  quick_concurrency_test_results.json
docker/: Dockerfile.dev  docker-compose.prod.yml  docker-compose.yml
docs/: API_REFERENCE.md  API_SOTA_MODELS.md  ARCHITECTURE.md  AUDIO_ARCHITECTURE.md  AUTHENTICATION.md  AUTHENTICATION_ENDPOINTS.md  AUTOSCALING_ARCHITECTURE.md  BENCHMARK_GUIDE.md  BENCHMARK_README.md  BENCHMARK_RESEARCH_PAPER.md  BENCHMARK_SUMMARY.md  BENCHMARK_UPDATE_SUMMARY.md  BUILDING_WITH_TORCH.md  CODE_SIMPLIFICATION.md  COMPLETE_TESTING_GUIDE.md  COMPONENTS.md  CONFIGURATION.md  CONTRIBUTING.md  CUDA_TENSORRT_OPTIMIZATION.md  CUDA_TENSORRT_SETUP.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  FAQ.md  FINAL_SUMMARY.md  GITIGNORE_GUIDE.md  GIT_CLEANUP_SUMMARY.md  GPU_BENCHMARK_RESULTS.md  IMAGE_MODELS_STATUS.md  MODEL_AUTO_DOWNLOAD.md  NUMBA_JIT_INTEGRATION.md  PERFORMANCE_OPTIMIZATIONS.md  POST_DOWNLOAD_OPTIMIZATION.md  QUICK_START.md  README.md  RUN_NOW.md  SOTA_IMAGE_MODELS_SUMMARY.md  SOTA_MODELS.md  SUMMARY.md  TESTING.md  TEST_FIXES.md  (+24 more)
examples/: README.md  api_endpoint_examples.py  audio_example.py  basic_usage.py  config_example.py  config_modification_examples.py  enterprise_example.py  examples_enhanced_optimization.py  fast_processors_example.py  gpu_detection_examples.py  hlrtf_optimization_example.py  model_download_example.py  numba_jit_integration_demo.py  onnx_benchmark.rs  secure_image_processing_demo.py  test_throughput_improvements.rs  yolo_detection_example.py
framework/: __init__.py
kernel_cache/: kernel_cache_cpu.json
scripts/: download_llm_model.sh  download_models.sh  lcov_summary.py  run_multi_gpu_tests.py  setup_cuda_benchmark.ps1  validate_performance_optimization.py
services/llm/: Cargo.toml  config.toml
services/llm/src/: config.rs  engine.rs  handler.rs  main.rs
src/: __init__.py  batch.rs  cache.rs  clock.rs  compression.rs  concurrency_limiter.rs  config.rs  dedup.rs  error.rs  guard.rs  high_perf.rs  image_processor.rs  inflight_batch.rs  lib.rs  main.rs  model_pool.rs  monitor.rs  session_pool.rs  tensor_pool.rs  torch_optimization.rs  ultra_optimized_processor.rs  worker_pool.rs
test_enhanced_csv_results/: enhanced_csv_demo.csv  enhanced_csv_demo_detailed.csv  enhanced_csv_demo_results.json
tests/: ENHANCED_OPTIMIZATION_TESTS.md  README.md  README_secure_image_tests.md  benchmark_test.rs  conftest.py  integration_test.rs  pytest_concurrency.ini  run_concurrency_tests.py  run_secure_image_tests.py  test_audio_integration.py  test_configuration_fixes.py  test_inference_engine.py  test_postprocessor.py  test_preprocessor.py  test_segmentation_pipeline.py  yolo_test.rs
tools/: README.md  gpu_detect.py  install_audio.py  latency_benchmark.py  performance_test.py
(+631 files in other folders)
