[package]
name = "torch_inference"
version = "1.0.0"
edition = "2021"
description = "High-performance PyTorch inference framework in Rust"
authors = ["Genta Dev Team"]

[dependencies]
# Web framework
actix-web = "4.8"
actix-rt = "2.10"
actix-files = "0.6"
actix-multipart = "0.6"
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"

# HTTP and async
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
async-trait = "0.1"

# Image processing
image = "0.24"
imageproc = "0.23"
fast_image_resize = "2.7"

# Audio processing
hound = "3.5"
rodio = "0.17"
rubato = "0.14"
symphonia = { version = "0.5", features = ["all"] }

# ML and inference
onnxruntime = { version = "0.0.14", optional = true }
ort = { version = "2.0.0-rc.10", default-features = false, features = ["load-dynamic", "half", "copy-dylibs"] }
ndarray = "0.15"
tch = { version = "0.13", optional = true, features = [] }
candle-core = { version = "0.3", optional = true }
candle-nn = { version = "0.3", optional = true }

# Logging and monitoring
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Security and auth
jsonwebtoken = "9.3"
bcrypt = "0.15"
uuid = { version = "1.10", features = ["v4", "serde"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.13"
dotenv = "0.15"

# Caching
dashmap = "5.5"
lazy_static = "1.4"
lru = "0.12"

# Compression
flate2 = "1.0"
tar = "0.4"

# System info
num_cpus = "1.16"
sysinfo = "0.31"
nvml-wrapper = { version = "0.9", optional = true }

# Progress tracking
indicatif = "0.17"

# Validation
validator = { version = "0.16", features = ["derive"] }

# File operations
walkdir = "2.4"
tempfile = "3.8"
bytes = "1.5"

[features]
default = []
cuda = ["nvml-wrapper"]
onnx = ["onnxruntime"]
torch = ["tch"]
candle = ["candle-core", "candle-nn"]
all-backends = ["cuda", "onnx", "torch", "candle"]

[[bin]]
name = "torch-inference-server"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
