[package]
name = "torch_inference"
version = "1.0.0"
edition = "2021"
description = "High-performance PyTorch inference framework in Rust"
authors = ["Genta Dev Team"]

[dependencies]
# Web framework
actix-web = "4.8"
actix-rt = "2.10"
actix-files = "0.6"
actix-multipart = "0.6"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "net", "time", "sync", "fs", "io-util"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"

# HTTP and async
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Image processing
image = "0.24"
imageproc = "0.23"
fast_image_resize = "2.7"

# Audio processing
hound = "3.5"
rodio = "0.17"
rubato = "0.14"
symphonia = { version = "0.5", features = ["all"] }

# ML and inference
onnxruntime = { version = "0.0.14", optional = true }
ort = { version = "2.0.0-rc.10", default-features = false, features = ["load-dynamic", "half", "copy-dylibs", "coreml"] }
ndarray = "0.15"
tch = { version = "0.16", optional = true, features = [] }  # Requires PyTorch 2.3.0+
candle-core = { version = "0.3", optional = true }
candle-nn = { version = "0.3", optional = true }
pyo3 = { version = "0.20", features = ["auto-initialize"] }

# Logging and monitoring
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt", "ansi"] }
tracing-appender = "0.2"
tracing-opentelemetry = { version = "0.22", optional = true }
opentelemetry = { version = "0.21", optional = true }
opentelemetry-otlp = { version = "0.14", optional = true }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"], optional = true }
sys-info = "0.9"
prometheus = { version = "0.13", optional = true }
lazy_static = "1.4"

# Security and auth
jsonwebtoken = "9.3"
bcrypt = "0.15"
uuid = { version = "1.10", features = ["v4", "serde"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.13"
dotenv = "0.15"

# Caching
dashmap = "5.5"
lru = "0.12"

# Compression
flate2 = "1.0"
tar = "0.4"
zip = "0.6"

# System info
num_cpus = "1.16"
sysinfo = "0.31"
nvml-wrapper = { version = "0.9", optional = true }
tikv-jemallocator = { version = "0.5", optional = true }

# Progress tracking
indicatif = "0.17"

# Validation
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"

# File operations
walkdir = "2.4"
tempfile = "3.8"
bytes = "1.5"
rayon = "1.11.0"
parking_lot = "0.12.5"
plotters = { version = "0.3.7", features = ["bitmap_backend", "bitmap_encoder", "ttf", "chrono"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"
tokio-test = "0.4"
mockall = "0.12"
rstest = "0.18"
test-case = "3.3"
serial_test = "3.0"
futures-util = "0.3"
lazy_static = "1.4"

[features]
default = ["jemalloc"]  # Use jemalloc by default for better performance
cuda = ["nvml-wrapper"]
onnx = ["onnxruntime"]
torch = ["tch"]
candle = ["candle-core", "candle-nn"]
telemetry = ["tracing-opentelemetry", "opentelemetry", "opentelemetry-otlp", "opentelemetry_sdk"]
metrics = ["prometheus"]
jemalloc = ["tikv-jemallocator"]
all-backends = ["cuda", "onnx", "torch", "candle"]

[lib]
name = "torch_inference"
path = "src/lib.rs"

[[bin]]
name = "torch-inference-server"
path = "src/main.rs"

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "model_inference_bench"
harness = false

[[bench]]
name = "model_inference_bench_optimized"
harness = false

[[bench]]
name = "model_inference_bench_with_report"
harness = false

[[bench]]
name = "batch_concurrent_bench"
harness = false

# Benchmark analysis binaries (temporarily disabled due to compilation errors)
# [[bin]]
# name = "analyze-benchmarks"
# path = "benches/analyze_benchmarks.rs"
# 
# [[bin]]
# name = "analyze-scaling"
# path = "benches/analyze_scaling.rs"
# 
# [[bin]]
# name = "generate-inference-table"
# path = "benches/generate_inference_table.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
incremental = true
codegen-units = 256

[profile.test]
opt-level = 1
incremental = true

[[bench]]
name = "image_classification_bench"
harness = false

[[bench]]
name = "concurrent_throughput_bench"
harness = false

[[bench]]
name = "optimized_concurrent_bench"
harness = false

[[bench]]
name = "optimized_throughput_bench"
harness = false

[[bench]]
name = "ultra_performance_bench"
harness = false

[[bin]]
name = "visualize_throughput"
path = "benches/visualize_throughput.rs"

[[bin]]
name = "visualize_multi_model"
path = "benches/visualize_multi_model.rs"
